--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-use-form": "^1.0.3",
     "typescript": "^4.3.4",
     "use-double-tap": "^1.3.3",
     "web-vitals": "^1.1.2"
