--- a/package.json
+++ b/package.json
@@ -8,28 +8,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.15",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "jsdoc": "^3.6.7",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "reactjs-use-form": "^1.0.3",
     "typescript": "^4.3.4",
-    "use-double-tap": "^1.3.3",
-    "web-vitals": "^1.1.2"
+    "use-double-tap": "^1.3.3"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
@@ -56,7 +43,20 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.15",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@welldone-software/why-did-you-render": "^6.2.0",
+    "node-sass": "^6.0.1",
+    "prettier": "2.3.2",
+    "react-dotenv": "^0.1.3",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "react-dotenv": {
     "whitelist": [
