--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,9 +14,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
-    env:
-      INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
+  build_deploy:
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -30,6 +29,15 @@ jobs:
         with:
           submodules: recursive
           token: ${{ secrets.PUBLISH_PAT }}
+      - name: 🔄 Restore npm cahce
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: 📦 Install packages using npm
+        run: npm install --silent
       - name: 🏗️ Build main package using react-scripts
         run: npm run build
       - name: 🚀 Deploy to GitHub Pages
