--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-lab",
   "version": "1.1.0",
   "private": true,
+  "homepage": "https://amiroff157.github.io/movie-lab",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -14,7 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "reactjs-use-form": "^1.0.3",
+    "reactjs-use-form": "^1.2.4",
     "typescript": "^4.3.4",
     "use-double-tap": "^1.3.3"
   },
