--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "reactjs-use-form": "^1.2.4",
+    "react-dotenv": "^0.1.3",
     "typescript": "^4.3.4",
     "use-double-tap": "^1.3.3"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-dotenv && react-scripts build",
-    "test": "react-dotenv && react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
