--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,6 +18,8 @@ jobs:
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      API_KEY: ${{ secrets.API_KEY }}
     strategy:
       matrix:
         node-version: [ 14.x ]
