--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       API_KEY: ${{ secrets.API_KEY }}
-      INPUT_TOKEN: ${{ secrets.PUBLISH_PAT }}
+      INPUT_TOKEN: ${{ secrets.PAT }}
     strategy:
       matrix:
         node-version: [ 14.x ]
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-          token: ${{ secrets.PUBLISH_PAT }}
+          token: ${{ secrets.PAT }}
       - name: 🔄 Restore npm cahce
         uses: actions/cache@v2
         with:
