--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-lab",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://amiroff157.github.io/movie-lab",
+  "homepage": "https://amir0ff.github.io/movie-lab",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
